--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,11 +1,37 @@
 .example-container {
     position: absolute;
     top: 60px;
-    bottom: 0;
+    bottom: 60px;
+    left: 0;
+    right: 0;
+  }
+  
+  .example-sidenav {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px;
+    background-color: rgba(125,125,125,0.5);
+  }
+  
+  .example-header {
+    position: fixed;
+    top: 0;
     left: 0;
     right: 0;
   }
 
-.top_bar {
-  right: 60;
-}
+  .example-footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(125,125,125,0.5);
+  }
+  .example-spacer {
+    flex: 1 1 auto;
+  }
+  .icon {
+    font-size: 36px;
+  }
+  
