--- a/src/app/components/content/members/members-overview/members-overview.component.html
+++ b/src/app/components/content/members/members-overview/members-overview.component.html
@@ -5,4 +5,5 @@
     <mat-grid-tile><app-team-view></app-team-view></mat-grid-tile>
     <mat-grid-tile><app-team-view></app-team-view></mat-grid-tile>
     <mat-grid-tile><app-team-view></app-team-view></mat-grid-tile>
+    <mat-grid-tile><app-team-view></app-team-view></mat-grid-tile>
 </mat-grid-list>
