--- a/src/app/components/content/members/person/person.component.html
+++ b/src/app/components/content/members/person/person.component.html
@@ -1,1 +1,187 @@
-<p>person works!</p>
+
+    <button mat-icon-button aria-label="Example icon button with a open in new tab icon" class="save_button" >
+        <mat-icon>save</mat-icon>
+    </button>
+<div class="row detail">
+	
+	<form class="example-form" appearance="fill">
+		<mat-form-field class="example-full-width" appearance="fill">
+			<mat-label>Name</mat-label>
+			<input type="text" matInput [formControl]="myControl">
+		</mat-form-field>
+		<mat-form-field class="example-full-width" appearance="fill">
+			<mat-label>Vorname</mat-label>
+			<input type="text" matInput [formControl]="myControl">
+		</mat-form-field>
+        <mat-form-field appearance="fill">
+            <mat-label>Geschlecht</mat-label>
+			<select matNativeControl>
+				<option value="Weiblich">Weiblich</option>
+				<option value="Männlich">Männlich</option>
+				<option value="Divers">Divers</option>
+			</select>
+		</mat-form-field>
+        <mat-form-field appearance="fill">
+            <mat-label>Choose a date</mat-label>
+            <input matInput [matDatepicker]="picker">
+            <mat-hint>MM/DD/YYYY</mat-hint>
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+          </mat-form-field>
+	</form>
+    <br>
+    <mat-accordion>
+        <mat-expansion-panel (opened)="panelOpenState = true"
+                             (closed)="panelOpenState = false">
+          <mat-expansion-panel-header>
+            <mat-panel-title>Adresse</mat-panel-title>
+          </mat-expansion-panel-header>
+          <p>
+            <mat-form-field class="example-full-width" appearance="fill">
+              <mat-label>Straße</mat-label>
+              <textarea matInput></textarea>
+            </mat-form-field>
+            <mat-form-field class="example-full-width" appearance="fill">
+              <mat-label>Hausnummer</mat-label>
+              <textarea matInput></textarea>
+            </mat-form-field>
+            <mat-form-field class="example-full-width" appearance="fill">
+              <mat-label>Stadt</mat-label>
+              <textarea matInput></textarea>
+            </mat-form-field>
+            <mat-form-field class="example-full-width" appearance="fill">
+              <mat-label>PLZ</mat-label>
+              <textarea matInput></textarea>
+            </mat-form-field>
+          </p>
+        
+        </mat-expansion-panel>        
+        <mat-expansion-panel (opened)="panelOpenState = true"
+                             (closed)="panelOpenState = false">
+          <mat-expansion-panel-header>
+            <mat-panel-title>Kontaktdaten</mat-panel-title>
+          </mat-expansion-panel-header>
+          <p>
+            <mat-form-field class="example-full-width" appearance="fill">
+              <mat-label>Telefon</mat-label>
+              <textarea matInput></textarea>
+            </mat-form-field>
+            <mat-form-field class="example-full-width" appearance="fill">
+              <mat-label>Mobil</mat-label>
+              <textarea matInput></textarea>
+            </mat-form-field>
+            <mat-form-field class="example-full-width" appearance="fill">
+              <mat-label>E-Mail</mat-label>
+              <textarea matInput></textarea>
+            </mat-form-field>
+          </p>
+        
+        </mat-expansion-panel>       
+        <mat-expansion-panel (opened)="panelOpenState = true"
+                             (closed)="panelOpenState = false">
+          <mat-expansion-panel-header>
+            <mat-panel-title>Kontaktpersonen</mat-panel-title>
+          </mat-expansion-panel-header>
+          <p>
+            <button mat-icon-button>
+                <mat-icon>add</mat-icon>
+            </button>
+            <form class="example-form" appearance="fill">
+                <mat-form-field class="example-full-width" appearance="fill">
+                    <mat-label>Name</mat-label>
+                    <input type="text" matInput [formControl]="myControl">
+                </mat-form-field>
+                <mat-form-field class="example-full-width" appearance="fill">
+                    <mat-label>Vorname</mat-label>
+                    <input type="text" matInput [formControl]="myControl">
+                </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>Geschlecht</mat-label>
+                    <select matNativeControl>
+                        <option value="Weiblich">Weiblich</option>
+                        <option value="Männlich">Männlich</option>
+                        <option value="Divers">Divers</option>
+                    </select>
+                </mat-form-field>
+                <mat-form-field appearance="fill">
+                    <mat-label>Choose a date</mat-label>
+                    <input matInput [matDatepicker]="picker">
+                    <mat-hint>MM/DD/YYYY</mat-hint>
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-datepicker #picker></mat-datepicker>
+                </mat-form-field>
+                <br>
+                <mat-form-field class="example-full-width" appearance="fill">
+                    <mat-label>Straße</mat-label>
+                    <input type="text" matInput [formControl]="myControl">
+                </mat-form-field>
+                <mat-form-field class="example-full-width" appearance="fill">
+                    <mat-label>Hausnummer</mat-label>
+                    <input type="text" matInput [formControl]="myControl">
+                </mat-form-field>
+                <mat-form-field class="example-full-width" appearance="fill">
+                    <mat-label>Stadt</mat-label>
+                    <input type="text" matInput [formControl]="myControl">
+                </mat-form-field>
+                <mat-form-field class="example-full-width" appearance="fill">
+                    <mat-label>PLZ</mat-label>
+                    <input type="text" matInput [formControl]="myControl">
+                </mat-form-field>
+                <br>
+                <mat-form-field class="example-full-width" appearance="fill">
+                    <mat-label>Telefon</mat-label>
+                    <input type="text" matInput [formControl]="myControl">
+                </mat-form-field>
+                <mat-form-field class="example-full-width" appearance="fill">
+                    <mat-label>Mobil</mat-label>
+                    <input type="text" matInput [formControl]="myControl">
+                </mat-form-field>
+                <mat-form-field class="example-full-width" appearance="fill">
+                    <mat-label>E-Mail</mat-label>
+                    <input type="text" matInput [formControl]="myControl">
+                </mat-form-field>
+            </form>
+            <br>
+            <mat-label>Abholerlaubnis </mat-label>
+            <mat-slide-toggle></mat-slide-toggle>
+            <br>
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+                <!--- Note that these columns can be defined in any order.
+                      The actual rendered columns are set as a property on the row definition" -->
+              
+                <!-- Position Column -->
+                <ng-container matColumnDef="name">
+                  <th mat-header-cell *matHeaderCellDef> Name </th>
+                  <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                </ng-container>
+              
+                <!-- Name Column -->
+                <ng-container matColumnDef="vorname">
+                  <th mat-header-cell *matHeaderCellDef> Vorname </th>
+                  <td mat-cell *matCellDef="let element"> {{element.vorname}} </td>
+                </ng-container>
+              
+                <!-- Weight Column -->
+                <ng-container matColumnDef="telefon">
+                  <th mat-header-cell *matHeaderCellDef> Telefon </th>
+                  <td mat-cell *matCellDef="let element"> {{element.telefon}} </td>
+                </ng-container>
+              
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="mobile">
+                  <th mat-header-cell *matHeaderCellDef> Modile </th>
+                  <td mat-cell *matCellDef="let element"> {{element.mobile}} </td>
+                </ng-container>
+
+                <ng-container matColumnDef="abholerlaubnis">
+                  <th mat-header-cell *matHeaderCellDef> Abholerlaubnis </th>
+                  <td mat-cell *matCellDef="let element"> <mat-icon aria-hidden="false" aria-label="Example home icon">done</mat-icon> </td>
+                </ng-container>
+              
+                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+              </table>
+        </mat-expansion-panel>
+      </mat-accordion>
+</div>
